Add login module

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
     "Тестовый пример": "Test example",
     "Язык": "English",
-    "Короткий язык": "En"
+    "Короткий язык": "En",
+    "Вы ввели неверный логин или пароль": "We cannot find an account with that login or password! Try again."
 }
