--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,5 @@
 {
     "Тестовый пример": "Тестовый пример",
     "Язык": "Русский",
-    "Короткий язык": "Ru",
-    "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль! Попробуйте повторить попытку."
+    "Короткий язык": "Ru"
 }
