--- a/public/locales/ru/loginForm.json
+++ b/public/locales/ru/loginForm.json
@@ -1,4 +1,5 @@
 {
     "Форма авторизации": "Форма авторизации",
-    "Войти": "Войти"
+    "Войти": "Войти",
+    "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль! Попробуйте повторить попытку."
 }
