Fix typings, add profile, fix tests

--- a/public/locales/en/profilePage.json
+++ b/public/locales/en/profilePage.json
@@ -1,3 +1,7 @@
 {
-    "PROFILE PAGE": "Profile page"
+    "PROFILE PAGE": "Profile page",
+    "Редактировать": "Edit",
+    "Профиль": "Profile",
+    "Ваше имя": "First name",
+    "Ваша фамилия": "Last name"
 }
