--- a/public/locales/ru/profilePage.json
+++ b/public/locales/ru/profilePage.json
@@ -1,3 +1,7 @@
 {
-    "PROFILE PAGE": "Страница профиля"
+    "PROFILE PAGE": "Страница профиля",
+    "Редактировать": "Редактировать",
+    "Профиль": "Профиль",
+    "Ваше имя": "Ваше имя",
+    "Ваша фамилия": "Ваша фамилия"
 }
