Update user page, add auth only route, add user inputs

--- a/public/locales/ru/profilePage.json
+++ b/public/locales/ru/profilePage.json
@@ -1,7 +1,18 @@
 {
     "PROFILE PAGE": "Страница профиля",
     "Редактировать": "Редактировать",
+    "Отменить": "Отменить",
+    "Сохранить": "Сохранить",
     "Профиль": "Профиль",
     "Ваше имя": "Ваше имя",
-    "Ваша фамилия": "Ваша фамилия"
+    "Ваша фамилия": "Ваша фамилия",
+    "Ваш возраст": "Ваш возраст",
+    "Город": "Город",
+    "Имя пользователя": "Имя пользователя",
+    "Введите ссылку на аватар": "Введите ссылку на аватар",
+    "Аватар": "Аватар",
+    "Ошибка": "Ошибка",
+    "Непредвиденная ошибка": "Произошла непредвиденная ошибка, пожалуйста обновите страницу",
+    "Укажите валюту": "Укажите валюту",
+    "Укажите страну": "Укажите страну"
 }
