--- a/public/locales/en/profilePage.json
+++ b/public/locales/en/profilePage.json
@@ -1,7 +1,18 @@
 {
     "PROFILE PAGE": "Profile page",
     "Редактировать": "Edit",
+    "Отменить": "Cancel",
+    "Сохранить": "Save",
     "Профиль": "Profile",
     "Ваше имя": "First name",
-    "Ваша фамилия": "Last name"
+    "Ваша фамилия": "Last name",
+    "Ваш возраст": "Your age",
+    "Город": "City",
+    "Имя пользователя": "Username",
+    "Введите ссылку на аватар": "Enter a link to your avatar",
+    "Аватар": "Avatar",
+    "Ошибка": "Error",
+    "Непредвиденная ошибка": "An unexpected error occurred, please refresh the page",
+    "Укажите валюту": "Choose currency",
+    "Укажите страну": "Choose country"
 }
