--- a/public/locales/ru/profilePage.json
+++ b/public/locales/ru/profilePage.json
@@ -14,5 +14,10 @@
     "Ошибка": "Ошибка",
     "Непредвиденная ошибка": "Произошла непредвиденная ошибка, пожалуйста обновите страницу",
     "Укажите валюту": "Укажите валюту",
-    "Укажите страну": "Укажите страну"
+    "Укажите страну": "Укажите страну",
+    "Серверная ошибка": "Произошла серверная ошибка во время сохранения",
+    "Некорректный возраст": "Некорректный возраст",
+    "Некорректный регион": "Некорректный регион",
+    "Имя и фамилия обязательны": "Имя и фамилия обязательны",
+    "Данные не указаны": "Данные не указаны"
 }
