Add comment form

--- a/public/locales/ru/article-details.json
+++ b/public/locales/ru/article-details.json
@@ -1,4 +1,5 @@
 {
     "Пост не найден": "Пост не найден",
-    "Произошла ошибка при загрузке статьи": "Произошла ошибка при загрузке статьи"
+    "Произошла ошибка при загрузке статьи": "Произошла ошибка при загрузке статьи",
+    "Комментарии": "Комментарии"
 }
