--- a/public/locales/en/article-details.json
+++ b/public/locales/en/article-details.json
@@ -1,4 +1,5 @@
 {
     "Пост не найден": "The post hasn't been find",
-    "Произошла ошибка при загрузке статьи": "An error occured while loading the post"
+    "Произошла ошибка при загрузке статьи": "An error occured while loading the post",
+    "Комментарии": "Comments"
 }
