--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -1,3 +1,8 @@
 {
-    "Читать далее": "Read more..."
+    "Читать далее": "Read more...",
+    "Все статьи": "All articles",
+    "Айти": "IT",
+    "Экономика": "Economics",
+    "Наука": "Science",
+    "Статьи не найдены": "Nothing was found"
 }
