--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -1,3 +1,8 @@
 {
-    "Читать далее": "Читать далее..."
+    "Читать далее": "Читать далее...",
+    "Все статьи": "Все статьи",
+    "Айти": "Айти",
+    "Экономика": "Экономика",
+    "Наука": "Наука",
+    "Статьи не найдены": "Статьи не найдены"
 }
