Add edit and create page routes

--- a/public/locales/ru/navbar.json
+++ b/public/locales/ru/navbar.json
@@ -1,4 +1,6 @@
 {
     "Войти": "Войти",
-    "Выйти": "Выйти"
+    "Выйти": "Выйти",
+    "Создать статью": "Создать статью",
+    "News App": "News App"
 }
