--- a/public/locales/en/navbar.json
+++ b/public/locales/en/navbar.json
@@ -1,4 +1,6 @@
 {
     "Войти": "Login",
-    "Выйти": "Logout"
+    "Выйти": "Logout",
+    "Создать статью": "Create article",
+    "News App": "News App"
 }
