--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -1,3 +1,5 @@
 {
-    "Главная страница": "Main page"
+    "Главная страница": "Main page",
+    "Как вам статья?": "What's your opinion about this article?",
+    "Оставьте отзыв о статье": "Give as a score"
 }
