--- a/public/locales/ru/rating.json
+++ b/public/locales/ru/rating.json
@@ -1,5 +1,8 @@
 {
     "Закрыть": "Закрыть",
     "Отправить": "Отправить",
-    "Ваш отзыв": "Ваш отзыв"
+    "Ваш отзыв": "Ваш отзыв",
+    "Оцените статью": "Оцените статью",
+    "Спасибо за оценку": "Спасибо за оценку",
+    "Оставьте свой отзыв о статье, это поможет улучшить качество": "Оставьте свой отзыв о статье, это поможет улучшить качество"
 }
