Add toggle flags and auto remove script

--- a/public/locales/en/article-details.json
+++ b/public/locales/en/article-details.json
@@ -1,5 +1,6 @@
 {
     "Пост не найден": "The post hasn't been find",
     "Произошла ошибка при загрузке статьи": "An error occured while loading the post",
-    "Комментарии": "Comments"
+    "Комментарии": "Comments",
+    "Оценка статей скоро появится": "Article rating comming soon"
 }
