--- a/public/locales/ru/article-details.json
+++ b/public/locales/ru/article-details.json
@@ -1,5 +1,6 @@
 {
     "Пост не найден": "Пост не найден",
     "Произошла ошибка при загрузке статьи": "Произошла ошибка при загрузке статьи",
-    "Комментарии": "Комментарии"
+    "Комментарии": "Комментарии",
+    "Оценка статей скоро появится": "Оценка статей скоро появится"
 }
