--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -4,5 +4,7 @@
     "Айти": "IT",
     "Экономика": "Economics",
     "Наука": "Science",
-    "Статьи не найдены": "Nothing was found"
+    "Статьи не найдены": "Nothing was found",
+    "Добро пожаловать на страницу статей": "Welcome to the articles page",
+    "Здесь вы можете искать и просматривать статьи на различные темы": "Here you can browser and search articles on various topics"
 }
