--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -4,5 +4,7 @@
     "Айти": "Айти",
     "Экономика": "Экономика",
     "Наука": "Наука",
-    "Статьи не найдены": "Статьи не найдены"
+    "Статьи не найдены": "Статьи не найдены",
+    "Добро пожаловать на страницу статей": "Добро пожаловать на страницу статей",
+    "Здесь вы можете искать и просматривать статьи на различные темы": "Здесь вы можете искать и просматривать статьи на различные темы"
 }
