Add ui dising switcher, mutation for change feature flags

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,9 @@
     "Тестовый пример": "Test example",
     "Язык": "English",
     "Короткий язык": "En",
-    "У вас нет доступа к этой странице": "You haven't permission for this page"
+    "У вас нет доступа к этой странице": "You haven't permission for this page",
+    "Настройки": "Settings",
+    "Админка": "Admin",
+    "Профиль": "Profile",
+    "Выйти": "Exit"
 }
