--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,9 @@
     "Тестовый пример": "Тестовый пример",
     "Язык": "Русский",
     "Короткий язык": "Ru",
-    "У вас нет доступа к этой странице": "У вас нет доступа к этой странице"
+    "У вас нет доступа к этой странице": "У вас нет доступа к этой странице",
+    "Настройки": "Настройки",
+    "Админка": "Админка",
+    "Профиль": "Профиль",
+    "Выйти": "Выйти"
 }
