--- a/public/locales/ru/article-details.json
+++ b/public/locales/ru/article-details.json
@@ -2,5 +2,9 @@
     "Пост не найден": "Пост не найден",
     "Произошла ошибка при загрузке статьи": "Произошла ошибка при загрузке статьи",
     "Комментарии": "Комментарии",
-    "Оценка статей скоро появится": "Оценка статей скоро появится"
+    "Оценка статей скоро появится": "Оценка статей скоро появится",
+    "{{count}} просмотров_zero": "{{count}} просмотров",
+    "{{count}} просмотров_one": "{{count}} просмотр",
+    "{{count}} просмотров_few": "{{count}} просмотра",
+    "{{count}} просмотров_many": "{{count}} просмотров"
 }
